NM-291: rm wildcard domain from presets
